--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -232,7 +232,7 @@ pageTitle: Test title
             <g>
             </g>
         </svg>
-        <a href="#community">Head-turning experience</a>
+        <a href="#experience">Head-turning experience</a>
     </span>
     <span>
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 453.841 453.841" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -268,7 +268,7 @@ pageTitle: Test title
                 />
             </g>
         </svg>
-        <a href="#spirituality">Life-changing faith</a>
+        <a href="#faith">Life-changing faith</a>
     </span>
 </div>
 
@@ -333,9 +333,11 @@ pageTitle: Test title
 
 </section>
 
+
 {{!-- Academics --}}
 <section id="academics" class="pv5  realSection" style="overflow: hidden;">
     <div class="bkg--diagonal2"></div>
+
     <div class="inner" style="position: relative;z-index:10;">
         <h2 class="delta  fw300  ta--center">World-class academics</h2>
 
@@ -358,20 +360,18 @@ pageTitle: Test title
             <div class="grid-cell">
                 <div class="medium-grid-pad-2x">
                     <div class=" backgroundOffset --diagonalOrange">
-                        <img style="border-radius: 1em; transform: translate3d(4em, -3em, 0);" src="https://c2.staticflickr.com/6/5611/15582254420_b1ca6067bb_b.jpg" alt="">
+                        <img id="acadImg" style="border-radius: 1em; transform: translate3d(4em, 0em, 0);" src="https://c2.staticflickr.com/6/5611/15582254420_b1ca6067bb_b.jpg" alt="">
                     </div>
                 </div>
             </div>
         </div>
-
-</div>
+    </div>
 </section>
-
 
 <section class="bkg--white  bkg--squiggles" >
     <div class="inner">
         <div class="proofPoints  grid  pt4  pb3  ta--center">
-            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; border-radius: .5em;" >
+            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; opacity: 0; border-radius: .5em;" >
                 <div class="grid-pad-3x ">
                     
                             <img class="lazyload  pt1" alt="Market research" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/market-research.png" width="60">
@@ -382,7 +382,7 @@ pageTitle: Test title
                 </div>
 
             </div>
-            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; border-radius: .5em;">
+            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; opacity: 0; border-radius: .5em;">
                 <div class="grid-pad-3x ">
 
                             <img class="lazyload  pt1" alt="Share your story" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/share-story.png" title="" style="" width="60">
@@ -392,7 +392,7 @@ pageTitle: Test title
 
                 </div>
             </div>
-            <div class="grid-cell  mb2   bkg--white " style="border: 2px solid #ffc600; border-radius: .5em;">
+            <div class="grid-cell  mb2   bkg--white " style="border: 2px solid #ffc600; opacity: 0; border-radius: .5em;">
                 <div class="grid-pad-3x ">
  
                             <img class="lazyload  pt1" alt="Hands-on learning" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/hands-on.png" width="60">
@@ -517,8 +517,9 @@ pageTitle: Test title
     </div>
 </section>
 
+
 {{!-- Experience --}}
-<section class="pv6  realSection">
+<section id="experience" class="pv6  realSection">
     <div class="bkg--diagonal2"></div>
     <div class="inner">
         <h2 class="delta  mt0  mb2  fw300  ta--center">Head-turning experience</h2>
@@ -655,7 +656,7 @@ pageTitle: Test title
 </section>
 
 {{!-- Faith --}}
-<section class="mt4  pt6  realSection">
+<section  id="faith" class="mt4  pt6  realSection">
     <div class="bkg--diagonal2"></div>
     <div class="inner">
         <h2 class="mt0  mb2  fw300  ta--center  delta">Life-changing faith</h2>
