--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -341,18 +341,11 @@ pageTitle: Test title
     <div class="inner" style="position: relative;z-index:10;">
         <h2 class="delta  fw300  ta--center">World-class academics</h2>
 
-        <div class="grid  grid--center  mb5">
-            <div class="grid-cell u-medium-2-3">
-                <div class="medium-grid-pad-1x">
-                    <h3 class="alpha fw400">Extraordinary education starts with extraordinary teachers.</h3>
-                    <p class="h3 fw300">At Bethel, you’ll learn under passionate, engaged professors—many with Ivy League credentials—who will support you, challenge you, and collaborate with you on everything from high-level research to national conference presentations.</p>
-                </div>
-            </div>
-        </div>       
-
         <div class="grid  mb3">
             <div class="grid-cell u-medium-1-3">
                 <div class="medium-grid-pad-2x">
+                        <h3 class="alpha fw400">Extraordinary education starts with extraordinary teachers.</h3>
+                    <p class="h3 fw300">At Bethel, you’ll learn under passionate, engaged professors—many with Ivy League credentials—who will support you, challenge you, and collaborate with you on everything from high-level research to national conference presentations.</p>
                     <h3 class="h1 fw400">Learn from the best.</h3>
                     <p>Whether you’re rolling up your sleeves in our cadaver lab or connecting over a cup of coffee after class, our faculty will encourage you to pursue your passions and map out a path toward the career you’ve always wanted.</p>
                 </div>
@@ -368,10 +361,10 @@ pageTitle: Test title
     </div>
 </section>
 
-<section class="bkg--white  bkg--squiggles" >
+<section class="bkg--yellow  bkg--squiggles" >
     <div class="inner">
-        <div class="proofPoints  grid  pt4  pb3  ta--center">
-            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; opacity: 0; border-radius: .5em;" >
+        <div id="pp1" class="proofPoints  grid  pt4  pb3  ta--center">
+            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; opacity: 1; border-radius: .5em;" >
                 <div class="grid-pad-3x ">
                     
                             <img class="lazyload  pt1" alt="Market research" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/market-research.png" width="60">
@@ -382,7 +375,7 @@ pageTitle: Test title
                 </div>
 
             </div>
-            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; opacity: 0; border-radius: .5em;">
+            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; opacity: 1; border-radius: .5em;">
                 <div class="grid-pad-3x ">
 
                             <img class="lazyload  pt1" alt="Share your story" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/share-story.png" title="" style="" width="60">
@@ -392,7 +385,7 @@ pageTitle: Test title
 
                 </div>
             </div>
-            <div class="grid-cell  mb2   bkg--white " style="border: 2px solid #ffc600; opacity: 0; border-radius: .5em;">
+            <div class="grid-cell  mb2   bkg--white " style="border: 2px solid #ffc600; opacity: 1; border-radius: .5em;">
                 <div class="grid-pad-3x ">
  
                             <img class="lazyload  pt1" alt="Hands-on learning" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/hands-on.png" width="60">
@@ -531,7 +524,7 @@ pageTitle: Test title
                     </div>
                 </div>
             </div>
-            <div class="grid-cell  u-1-3--medium">
+            <div class="grid-cell  u-medium-1-3">
                 <div class="medium-grid-pad-2x">
                     <h3 class="alpha  fw400">Practice what you learn.</h3>
                     <p>Some of the best learning comes from doing. That’s why we weave hundreds of hands-on experiences into our programs—like collaborative research, internships, study abroad, and service learning, to name a few.</p>
@@ -542,9 +535,9 @@ pageTitle: Test title
     </div>
 </section>
 
-<section class="bkg--white  bkg--squiggles" >
+<section class="bkg--yellow  bkg--squiggles" >
     <div class="inner">
-        <div class="proofPoints  grid  pt4  pb3  ta--center">
+        <div id="pp2" class="proofPoints  grid  pt4  pb3  ta--center">
             <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; border-radius: .5em;" >
                 <div class="grid-pad-3x ">
                     
@@ -584,7 +577,7 @@ pageTitle: Test title
 <section class="bkg--white  pv6">
     <div class="inner">
         <div class="grid  mb5">
-            <div class="grid-cell u-medium-1-3">
+            <div class="grid-cell">
                 <div class="grid-pad-2x">
                     <img class="lazyload mb2"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 1600w"
                         data-sizes="auto">
@@ -596,7 +589,7 @@ pageTitle: Test title
                 </div>
             </div>
 
-            <div class="grid-cell u-medium-1-3">
+            <div class="grid-cell">
                 <div class="grid-pad-2x">
                     <img class="lazyload mb2"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 1600w"
                         data-sizes="auto">
@@ -608,7 +601,7 @@ pageTitle: Test title
                 </div>
             </div>
 
-            <div class="grid-cell u-medium-1-3">
+            <div class="grid-cell">
                 <div class="grid-pad-2x">
                     <img class="lazyload mb2"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 1600w"
                         data-sizes="auto">
@@ -661,7 +654,7 @@ pageTitle: Test title
     <div class="inner">
         <h2 class="mt0  mb2  fw300  ta--center  delta">Life-changing faith</h2>
         <div class="grid  mb3">
-            <div class="grid-cell  u-medium-1-3">
+            <div class="grid-cell ">
                 <div class="medium-grid-pad-2x">
                     <h3 class="alpha fw400">Live what you believe.</h3>
                     <p>Beyond academics, there's something that draws Bethel students together. It's a sense of calling, a commitment to shared values, and a deep desire to fulfill a greater purpose.</p>
@@ -694,7 +687,7 @@ pageTitle: Test title
         </div>
 
         <div class="grid  mb5">
-            <div class="grid-cell u-medium-1-3">
+            <div class="grid-cell">
                 <div class="grid-pad-2x">
                     <img class="lazyload mb2"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://c2.staticflickr.com/8/7215/7401407656_b8444de1c5_b.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://c2.staticflickr.com/8/7215/7401407656_b8444de1c5_b.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://c2.staticflickr.com/8/7215/7401407656_b8444de1c5_b.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://c2.staticflickr.com/8/7215/7401407656_b8444de1c5_b.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://c2.staticflickr.com/8/7215/7401407656_b8444de1c5_b.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://c2.staticflickr.com/8/7215/7401407656_b8444de1c5_b.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://c2.staticflickr.com/8/7215/7401407656_b8444de1c5_b.jpg 1600w"
                         data-sizes="auto">
@@ -706,7 +699,7 @@ pageTitle: Test title
                 </div>
             </div>
 
-            <div class="grid-cell u-medium-1-3">
+            <div class="grid-cell">
                 <div class="grid-pad-2x">
                     <img class="lazyload mb2"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://c1.staticflickr.com/5/4538/38186429242_6149f592d2_b.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://c1.staticflickr.com/5/4538/38186429242_6149f592d2_b.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://c1.staticflickr.com/5/4538/38186429242_6149f592d2_b.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://c1.staticflickr.com/5/4538/38186429242_6149f592d2_b.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://c1.staticflickr.com/5/4538/38186429242_6149f592d2_b.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://c1.staticflickr.com/5/4538/38186429242_6149f592d2_b.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://c1.staticflickr.com/5/4538/38186429242_6149f592d2_b.jpg 1600w"
                         data-sizes="auto">
