--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -43,6 +43,8 @@ pageTitle: Test title
     }
 </style>
 
+{{> action-nav }}
+
 {{> moving-picture }}
 
 <div class="stickyBar">
@@ -380,8 +382,9 @@ pageTitle: Test title
 
                             <img class="lazyload  pt1" alt="Share your story" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/share-story.png" title="" style="" width="60">
   
-                            <p class="mv0  sans-serif  fw400" style="font-size:4.5em">12:1</p>
-                            <p class="h5  mv0  fw400">Student-to-faculty Ratio</p>
+                            <p class="mv0  sans-serif  fw400" style="font-size:4.5em">Top 15%</p>
+                            <p class="h5  mv0  fw400">Best Colleges for your Money</p>
+                            <small><i>— Money Magazine</i></small>
 
                 </div>
             </div>
@@ -554,8 +557,9 @@ pageTitle: Test title
 
                             <img class="lazyload  pt1" alt="Share your story" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/share-story.png" title="" style="" width="60">
   
-                            <p class="mv0  sans-serif  fw400" style="font-size:4.5em">12:1</p>
-                            <p class="h5  mv0  fw400">Student-to-faculty Ratio</p>
+                            <p class="mv0  sans-serif  fw400" style="font-size:4.5em">Top 15%</p>
+                            <p class="h5  mv0  fw400">Best Colleges for your Money</p>
+                            <small><i>— Money Magazine</i></small>
 
                 </div>
             </div>
@@ -654,7 +658,7 @@ pageTitle: Test title
     <div class="inner">
         <h2 class="mt0  mb2  fw300  ta--center  delta">Life-changing faith</h2>
         <div class="grid  mb3">
-            <div class="grid-cell ">
+            <div class="grid-cell u-medium-1-3">
                 <div class="medium-grid-pad-2x">
                     <h3 class="alpha fw400">Live what you believe.</h3>
                     <p>Beyond academics, there's something that draws Bethel students together. It's a sense of calling, a commitment to shared values, and a deep desire to fulfill a greater purpose.</p>
