--- a/src/templates/partials/events.hbs
+++ b/src/templates/partials/events.hbs
@@ -1,99 +1,99 @@
-<div class="events">
 
-    <div class="event-feed-2450">
-
-        <h2>Events</h2>
-
-        <div class="events__item" itemscope="itemscope" itemtype="https://schema.org/Event">
-            <p class="events__date-tile">
-
-                <!--start and end date are on the same day-->
-                <!--OR if the event hasn't started yet.-->
-                <!--THEN display the start date as the date.-->
-
-                <!--Month-->
-                FEB
-
-                <!--Day-->
-                <span>14</span>
-
-                <!--Year-->
-                2016</p>
-
-                <div class="events__content">
-                    <!--Title + Link-->
-                    <p class="events__headline"><a href="https://bethel.edu/events/2016/admissions/admitted-student-overnight"><span itemprop="name">Admitted Student Overnight Event</span></a>
-
-                        <!--Time + Location-->
-
-                    </p><p class="events__location">5 p.m. | <span itemprop="location">Lundquist Community Life Center (CLC)</span></p>
-
-                    <!--Description-->
-                    <p class="events__description"><span itemprop="description">Congrats, you're accepted! Stay overnight on campus to get a feel for what it's like to be a Bethel student.</span></p>
-                </div>
-            </div>
-
-            <div class="events__item" itemscope="itemscope" itemtype="https://schema.org/Event">
-                <p class="events__date-tile">
-
-                    <!--start and end date are on the same day-->
-                    <!--OR if the event hasn't started yet.-->
-                    <!--THEN display the start date as the date.-->
-
-                    <!--Month-->
-                    FEB
-
-                    <!--Day-->
-                    <span>20</span>
-
-                    <!--Year-->
-                    2016</p>
-
-                    <div class="events__content">
-                        <!--Title + Link-->
-                        <p class="events__headline"><a href="https://bethel.edu/events/2016/admissions/saturday-visit-day"><span itemprop="name">Saturday Visit Day</span></a>
-
-                            <!--Time + Location-->
-
-                        </p><p class="events__location">10 a.m. | <span itemprop="location">Lundquist Community Life Center (CLC)</span></p>
-
-                        <!--Description-->
-                        <p class="events__description"><span itemprop="description">Busy schedule? Visit Bethel on the weekend!</span></p>
-                    </div>
-                </div>
-
-                <div class="events__item" itemscope="itemscope" itemtype="https://schema.org/Event">
-                    <p class="events__date-tile">
-
-                        <!--start and end date are on the same day-->
-                        <!--OR if the event hasn't started yet.-->
-                        <!--THEN display the start date as the date.-->
-
-                        <!--Month-->
-                        MAR
-
-                        <!--Day-->
-                        <span>6</span>
-
-                        <!--Year-->
-                        2016</p>
-
-                        <div class="events__content">
-                            <!--Title + Link-->
-                            <p class="events__headline"><a href="https://bethel.edu/events/2016/admissions/admitted-student-overnight"><span itemprop="name">Admitted Student Overnight Event</span></a>
-
-                                <!--Time + Location-->
-
-                            </p><p class="events__location">5 p.m. | <span itemprop="location">Lundquist Community Life Center (CLC)</span></p>
-
-                            <!--Description-->
-                            <p class="events__description"><span itemprop="description">Congrats, you're accepted! Stay overnight on campus to get a feel for what it's like to be a Bethel student.</span></p>
-                        </div>
-                    </div>
+    <div class="events__item" itemscope="itemscope" itemtype="https://schema.org/Event">
+        <p class="events__date-tile" itemprop="startDate">
 
 
+            <!--Month-->
+            APR
 
-                    <a class="btn center" href="http://www.bethel.edu/undergrad/admissions/visit/events">More Events</a>
+            <!--Day-->
+            <span>24</span>
 
-                </div>
-            </div>
+            <!--Year-->
+            2018</p>
+
+        <div class="events__content">
+            <!--Title + Link-->
+            <p class="events__headline">
+                <a href="https://www.bethel.edu/events/2018/admissions/speaker-series-global-business">
+                    <span itemprop="name">Speaker Series: Global Business</span>
+                </a>
+            </p>
+            <!--Time + Location-->
+            <p class="events__location">Noon CT
+                <span itemprop="location">Online</span>
+            </p>
+
+            <!--Description-->
+            <p class="events__description">
+                <span itemprop="description">Join us to learn more!</span>
+            </p>
+        </div>
+    </div>
+
+    <div class="events__item" itemscope="itemscope" itemtype="https://schema.org/Event">
+        <p class="events__date-tile" itemprop="startDate">
+
+
+            <!--Month-->
+            APR
+
+            <!--Day-->
+            <span>24</span>
+
+            <!--Year-->
+            2018</p>
+
+        <div class="events__content">
+            <!--Title + Link-->
+            <p class="events__headline">
+                <a href="https://www.bethel.edu/events/2018/bethel-connect-mayo-clinic">
+                    <span itemprop="name">Bethel Connect: Mayo Clinic</span>
+                </a>
+            </p>
+            <!--Time + Location-->
+            <p class="events__location">5 p.m.
+                <span itemprop="location">Pasquale's Neighborhood Pizzeria</span>
+            </p>
+
+            <!--Description-->
+            <p class="events__description">
+                <span itemprop="description">Join other alumni and spouses connected to Mayo Clinic for an evening of appetizers, networking, and Bethel
+                    updates.</span>
+            </p>
+        </div>
+    </div>
+
+    <div class="events__item" itemscope="itemscope" itemtype="https://schema.org/Event">
+        <p class="events__date-tile" itemprop="startDate">
+
+
+            <!--Month-->
+            APR
+
+            <!--Day-->
+            <span>24</span>
+
+            <!--Year-->
+            2018</p>
+
+        <div class="events__content">
+            <!--Title + Link-->
+            <p class="events__headline">
+                <a href="https://www.bethel.edu/events/arts/music/2018/great-hall-choral-arts-concert">
+                    <span itemprop="name">Great Hall Choral Arts Concert</span>
+                </a>
+            </p>
+            <!--Time + Location-->
+            <p class="events__location">7:30 p.m.
+                <span itemprop="location">Benson Great Hall</span>
+            </p>
+
+            <!--Description-->
+            <p class="events__description">
+                <span itemprop="description">Featuring the Irondale Knightingales Choir, Bethel Choir, and Bethel Women's Choir</span>
+            </p>
+        </div>
+    </div>
+
+    <a class="btn center" href="events/">More Events</a>
