--- a/src/templates/partials/news.hbs
+++ b/src/templates/partials/news.hbs
@@ -1,88 +1,63 @@
-<div class="news">
-	<div class="news-feed-8585">
-		<h2>News</h2>
 
-	    <div class="news__item" itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
-	    	<div class="news__image">
-		 		<a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><img src="https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg" class="delayed-image-load image-replace" alt="Bethel’s College of Arts &amp; Sciences (CAS) has a nearly 30-year history of peer-recognition for its faculty members through the Faculty Excellence Awards. " data-src="https://cdn1.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg"></a>
-		 	</div>
+    <div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
+        <div class="news__image">
+            <a href="https://www.bethel.edu/news/articles/2018/april/forensics-alyssa-teh">
+                <img class=" lazyloaded" data-src="//cdn3.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/forensics-alyssa-teh.jpg"
+                    alt="Bethel Student Named National Champion at Christian College Forensics Final" src="//cdn3.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/forensics-alyssa-teh.jpg">
 
-		 	<div class="news__content">
-			 	<p class="news__headline"><a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><span itemprop="headline">Faculty Recognized as Models of Excellence</span></a></p>
-			 	<p>December 03, 2014 | 10 a.m.</p>
-		 	</div>
-	    </div>
-
-	   	<div class="news__item" itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
-	    	<div class="news__image">
-		 		<a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><img src="https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg" class="delayed-image-load image-replace" alt="Bethel’s College of Arts &amp; Sciences (CAS) has a nearly 30-year history of peer-recognition for its faculty members through the Faculty Excellence Awards. " data-src="https://cdn1.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg"></a>
-		 	</div>
-
-		 	<div class="news__content">
-			 	<p class="news__headline"><a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><span itemprop="headline">Faculty Recognized as Models of Excellence</span></a></p>
-			 	<p>December 03, 2014 | 10 a.m.</p>
-		 	</div>
-	    </div>
-
-        <div class="news__item" itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
-        	<div class="news__image">
-    	 		<a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><img src="https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg" class="delayed-image-load image-replace" alt="Bethel’s College of Arts &amp; Sciences (CAS) has a nearly 30-year history of peer-recognition for its faculty members through the Faculty Excellence Awards. " data-src="https://cdn1.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/news/articles/2014/images/faculty-excellence.jpg"></a>
-    	 	</div>
-
-    	 	<div class="news__content">
-    		 	<p class="news__headline"><a href="http://www.bethel.edu/news/articles/2014/december/faculty-excellence"><span itemprop="headline">Faculty Recognized as Models of Excellence</span></a></p>
-    		 	<p>December 03, 2014 | 10 a.m.</p>
-    	 	</div>
+            </a>
         </div>
-                 
-{{!--                  <div itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
-                 <div class="grid">
-                 <div class="grid-cell  u-x-large-1-1">
-                 <div class="grid-pad-1x">
-                 <a href="http://www.bethel.edu/news/articles/2014/september/great-lakes-grant">
-                 <img src="https://cdn1.bethel.edu/resize/unsafe/300x0/smart/https://www.bethel.edu/news/articles/2014/images/great-lakes-grant.jpg" class="delayed-image-load image-replace" alt="" data-src="https://cdn1.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/news/articles/2014/images/great-lakes-grant.jpg">
-                 </a>
-                 </div>
-                 </div>
-                 <div class="grid-cell  u-x-large-1-1">
-                 <div class="grid-pad-1x">
-                 <h4>
-                 <a href="http://www.bethel.edu/news/articles/2014/september/great-lakes-grant">
-                 <span itemprop="headline">
-                 Bethel Awarded Internship Grant </span>
-                 </a>
-                 </h4>
-                 <p>
-                 September 26, 2014 | 8 a.m.</p>
-                 </div>
-                 </div>
-                 </div>
-                 </span>
-                 <div itemscope="itemscope" itemtype="http://schema.org/NewsArticle">
-                 <div class="grid">
-                 <div class="grid-cell  u-x-large-1-1">
-                 <div class="grid-pad-1x">
-                 <a href="http://www.bethel.edu/news/articles/2014/september/new-faculty">
-                 <img src="https://cdn3.bethel.edu/resize/unsafe/300x0/smart/https://www.bethel.edu/news/articles/2014/images/new-faculty.jpg" class="delayed-image-load image-replace" alt="Bethel University welcomes seven new full-time faculty members. In the College of Arts &amp; Sciences, four members were added to the full-time teaching staff for the 2014-2015 academic year." data-src="https://cdn3.bethel.edu/resize/unsafe/{width}x0/smart/https://www.bethel.edu/news/articles/2014/images/new-faculty.jpg">
-                 </a>
-                 </div>
-                 </div>
-                 <div class="grid-cell  u-x-large-1-1">
-                 <div class="grid-pad-1x">
-                 <h4>
-                 <a href="http://www.bethel.edu/news/articles/2014/september/new-faculty">
-                 <span itemprop="headline">
-                 New Faculty for 2014-2015</span>
-                 </a>
-                 </h4>
-                 <p>
-                 September 05, 2014 | 10:34 a.m.</p>
-                 </div>
-                 </div>
-                 </div>
-                 </span> --}}
-
-                         
+        <div class="news__content">
+            <p class="news__headline">
+                <a href="https://www.bethel.edu/news/articles/2018/april/forensics-alyssa-teh">
+                    <span itemprop="headline">Bethel Student Named National Champion at Christian College Forensics Final</span>
+                </a>
+            </p>
+            <p>April 23, 2018 | 8 p.m.</p>
+            <p>For Alyssa Teh ’20, forensics is more than just a speech club. It is a means of personal growth and emotional
+                expression.</p>
+        </div>
     </div>
+    <div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
+        <div class="news__image">
+            <a href="https://www.bethel.edu/news/articles/2018/april/edgren-scholars">
+                <!-- FIX -->
+                <img class=" lazyloaded" data-src="//cdn2.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/edgren-scholars.jpg"
+                    alt="Bethel Announces 2018 Edgren Scholars" src="//cdn2.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/edgren-scholars.jpg">
 
-</div>
+            </a>
+        </div>
+        <div class="news__content">
+            <p class="news__headline">
+                <a href="https://www.bethel.edu/news/articles/2018/april/edgren-scholars">
+                    <span itemprop="headline">Bethel Announces 2018 Edgren Scholars</span>
+                </a>
+            </p>
+            <!-- FIX -->
+            <p>April 23, 2018 | 1 p.m.</p>
+            <p>Four faculty-student teams will do grant-funded summer research through Bethel’s premier research grant program.
+                </p>
+        </div>
+    </div>
+    <div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
+        <div class="news__image">
+            <a href="https://www.bethel.edu/news/articles/2018/april/tuition-caps-gs-sem">
+                <!-- FIX -->
+                <img class=" lazyloaded" data-src="//cdn1.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/tuition-caps-gs-sem.jpg"
+                    alt="College of Adult &amp; Professional Studies Tuition Frozen for 2018-19" src="//cdn1.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/tuition-caps-gs-sem.jpg">
+
+            </a>
+        </div>
+        <div class="news__content">
+            <p class="news__headline">
+                <a href="https://www.bethel.edu/news/articles/2018/april/tuition-caps-gs-sem">
+                    <span itemprop="headline">College of Adult &amp; Professional Studies Tuition Frozen for 2018-19</span>
+                </a>
+            </p>
+            <!-- FIX -->
+            <p>April 19, 2018 | 1 p.m.</p>
+            <p>While tuition for adult undergraduate programs will remain the same, tuition for the Graduate School and Bethel
+                Seminary to increase.</p>
+        </div>
+    </div>
+    <a class="btn center" href="http://www.bethel.edu/news/news-archive">More News</a>
