--- a/src/css/grid/flex-grid.css
+++ b/src/css/grid/flex-grid.css
@@ -33,7 +33,7 @@
     list-style: none;
 
     @mixin respond-min $medium {
-      flex-wrap: nowrap;
+      /* flex-wrap: nowrap; */
     }
 }
 
@@ -169,39 +169,39 @@
     .x-large-grid--1-4 > .grid-cell {flex-basis: 25%;}
 }
 
-.u-1-12  {flex-basis: 8.33333%;flex-grow:0;}
+.u-1-12  {flex-basis: 8.33333%;flex-grow:0;flex-shrink:0;}
 .u-2-12,
-.u-1-6  {flex-basis: 16.66667%;flex-grow:0;}
-.u-1-5   {flex-basis: 20%;flex-grow:0;}
+.u-1-6  {flex-basis: 16.66667%;flex-grow:0;flex-shrink:0;}
+.u-1-5   {flex-basis: 20%;flex-grow:0;flex-shrink:0;}
 .u-3-12,
-.u-1-4  {flex-basis: 25%;flex-grow:0;}
+.u-1-4  {flex-basis: 25%;flex-grow:0;flex-shrink:0;}
 .u-4-12,
 .u-2-6,
-.u-1-3  {flex-basis: 33.33333%;flex-grow:0;}
-.u-2-5   {flex-basis: 40%;flex-grow:0;}
-.u-5-12  {flex-basis: 41.66667%;flex-grow:0;}
+.u-1-3  {flex-basis: 33.33333%;flex-grow:0;flex-shrink:0;}
+.u-2-5   {flex-basis: 40%;flex-grow:0;flex-shrink:0;}
+.u-5-12  {flex-basis: 41.66667%;flex-grow:0;flex-shrink:0;}
 .u-6-12,
 .u-3-6
 .u-2-4,
-.u-1-2  {flex-basis: 50%;flex-grow:0;}
-.u-7-12  {flex-basis: 58.33333%;flex-grow:0;}
-.u-3-5   {flex-basis: 60%;flex-grow:0;}
+.u-1-2  {flex-basis: 50%;flex-grow:0;flex-shrink:0;}
+.u-7-12  {flex-basis: 58.33333%;flex-grow:0;flex-shrink:0;}
+.u-3-5   {flex-basis: 60%;flex-grow:0;flex-shrink:0;}
 .u-8-12,
 .u-2-3,
-.u-4-6  {flex-basis: 66.66667%;flex-grow:0;}
+.u-4-6  {flex-basis: 66.66667%;flex-grow:0;flex-shrink:0;}
 .u-9-12,
-.u-3-4  {flex-basis: 75%;flex-grow:0;}
-.u-4-5   {flex-basis: 80%;flex-grow:0;}
+.u-3-4  {flex-basis: 75%;flex-grow:0;flex-shrink:0;}
+.u-4-5   {flex-basis: 80%;flex-grow:0;flex-shrink:0;}
 .u-10-12,
-.u-5-6 {flex-basis: 83.33333%;flex-grow:0;}
-.u-11-12 {flex-basis: 91.66667%;flex-grow:0;}
+.u-5-6 {flex-basis: 83.33333%;flex-grow:0;flex-shrink:0;}
+.u-11-12 {flex-basis: 91.66667%;flex-grow:0;flex-shrink:0;}
 .u-12-12,
 .u-6-6,
 .u-5-5,
 .u-4-4,
 .u-3-3,
 .u-2-2,
-.u-1-1   {flex-basis: 100%;flex-grow:0;}
+.u-1-1   {flex-basis: 100%;flex-grow:0;flex-shrink:0;}
 
 @media (max-width: 51.99em) {
     .u-small-1-12  {flex-basis: 8.33333%;flex-grow:0;}
