--- a/src/css/modules/stickyNav.css
+++ b/src/css/modules/stickyNav.css
@@ -1,8 +1,8 @@
 .stickyBar {
 	position: sticky;
-	top: -1px;
 	display: flex;
-	padding: 1.5em;
+	padding: 1em;
+	top: 0;
 	background: $bethel--blue;
 	z-index: 1000;
 	justify-content: space-around;
@@ -12,15 +12,15 @@
 
 	@mixin respond-min 830px {
 		font-size: 1.2rem;
-		margin-top: -98px;
+		margin-top: -86px;
 	}
 }
 
 .stickyBar span {
 	display: flex;
-	padding: 1em;
-	margin: -2em 0;
-	background: #1584c9;
+	/* /* padding: 1em; */
+	/* margin: -2em 0; */ */
+	/* background: #1584c9; */
 	display: flex;
 	align-items: center;
 	border-radius: 5px;
