--- a/src/templates/partials/news.hbs
+++ b/src/templates/partials/news.hbs
@@ -2,7 +2,7 @@
     <div class="news__item" itemscope="itemscope" itemtype="https://schema.org/NewsArticle">
         <div class="news__image">
             <a href="https://www.bethel.edu/news/articles/2018/april/forensics-alyssa-teh">
-                <img class=" lazyloaded" data-src="//cdn3.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/forensics-alyssa-teh.jpg"
+                <img class=" lazyload" data-src="//cdn3.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/forensics-alyssa-teh.jpg"
                     alt="Bethel Student Named National Champion at Christian College Forensics Final" src="//cdn3.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/forensics-alyssa-teh.jpg">
 
             </a>
@@ -13,7 +13,7 @@
                     <span itemprop="headline">Bethel Student Named National Champion at Christian College Forensics Final</span>
                 </a>
             </p>
-            <p>April 23, 2018 | 8 p.m.</p>
+            {{!-- <p class="news__date">April 23, 2018 | 8 p.m.</p> --}}
             <p>For Alyssa Teh ’20, forensics is more than just a speech club. It is a means of personal growth and emotional
                 expression.</p>
         </div>
@@ -22,7 +22,7 @@
         <div class="news__image">
             <a href="https://www.bethel.edu/news/articles/2018/april/edgren-scholars">
                 <!-- FIX -->
-                <img class=" lazyloaded" data-src="//cdn2.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/edgren-scholars.jpg"
+                <img class=" lazyload" data-src="//cdn2.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/edgren-scholars.jpg"
                     alt="Bethel Announces 2018 Edgren Scholars" src="//cdn2.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/edgren-scholars.jpg">
 
             </a>
@@ -34,7 +34,7 @@
                 </a>
             </p>
             <!-- FIX -->
-            <p>April 23, 2018 | 1 p.m.</p>
+            {{!-- <p class="news__date">April 23, 2018 | 1 p.m.</p> --}}
             <p>Four faculty-student teams will do grant-funded summer research through Bethel’s premier research grant program.
                 </p>
         </div>
@@ -43,7 +43,7 @@
         <div class="news__image">
             <a href="https://www.bethel.edu/news/articles/2018/april/tuition-caps-gs-sem">
                 <!-- FIX -->
-                <img class=" lazyloaded" data-src="//cdn1.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/tuition-caps-gs-sem.jpg"
+                <img class=" lazyload" data-src="//cdn1.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/tuition-caps-gs-sem.jpg"
                     alt="College of Adult &amp; Professional Studies Tuition Frozen for 2018-19" src="//cdn1.bethel.edu/resize/unsafe/215x0/smart/https://www.bethel.edu//news/articles/2018/images/tuition-caps-gs-sem.jpg">
 
             </a>
@@ -55,7 +55,7 @@
                 </a>
             </p>
             <!-- FIX -->
-            <p>April 19, 2018 | 1 p.m.</p>
+            {{!-- <p class="news__date">April 19, 2018 | 1 p.m.</p> --}}
             <p>While tuition for adult undergraduate programs will remain the same, tuition for the Graduate School and Bethel
                 Seminary to increase.</p>
         </div>
