--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -1,4 +1,4 @@
-<div class="sectionRequestInfo  bkg--gradient-blue-yellow">
+<div class="sectionRequestInfo">
 	<div class="inner  pv6">
 		<div class="grid  grid--center  bkg--white">
 			<div class="grid-cell">
